Fix padding in order to align website

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ section {
             justify-content: space-between;
             width: 70%;
             flex-wrap: wrap;
+            padding: 0 20px 0 20px;
         }
         
             .top-box-left {
@@ -96,7 +97,6 @@ section {
             flex-direction: column;
             gap: 10px;
             max-width: 400px;
-            padding: 20px;
             flex: 1 1 0;
             
             
@@ -120,8 +120,7 @@ section {
 
             .top-box-right {
                 display: flex;
-                padding: 20px;
-                
+                                
             }
 
 
@@ -261,7 +260,7 @@ section {
             margin: auto;
             width: 70%;
             flex-wrap: wrap;
-            padding: 48px;
+            padding: 48px 20px 48px 20px;
             
             
         }
@@ -269,12 +268,12 @@ section {
             .section5-box {
                 display: flex;
                 align-self: center;
-                justify-content: space-evenly;
+                justify-content: space-around;
                 align-items: center;
                 background-color: #3882F6;
                 border-radius: 8px;
-                margin: 0 20px 0 20px;;
-                padding: 32px 48px 32px 48px;
+                
+                padding: 32px 0px 32px 0px;
                 width: 100%;
                 flex-wrap: wrap;
                 
